# test-custom-logger

./: CMakeLists.txt  README.md  custom_logger.cpp  default_logger.ipp  logger.hpp  main.cpp
